syntax = "proto3";

package ai.lzy.v1;

import "ai/lzy/v1/common/zygote.proto";

option java_outer_classname = "Channels";
option java_package = "ai.lzy.v1";

message ChannelSpec {
  string channelName = 1;
  DataScheme contentType = 2;
  oneof type {
    DirectChannelType direct = 3;
    SnapshotChannelType snapshot = 4;
  }
}

message DirectChannelType {}

message SnapshotChannelType {
  string snapshotId = 1;
  string entryId = 2;
}